<resources>
    <string name="app_name">App</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="stats">Statistics</string>
    <string name="save">Save</string>
    <string name="board_size">Board Size</string>
    <string name="game_length">Game Length (in minutes)</string>
    <string name="word_weight">Word Weight</string>
    <string-array name="board_size_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="game_length_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="exit">Exit Game</string>
    <string name="reset">Reset</string>
    <string name="word_stats">Word Statistics</string>
    <string name="game_stats">Game Statistics</string>
    <string name="main_menu">Main Menu</string>
</resources>
