<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:onClick="newGame"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:onClick="settings"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/stats"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:onClick="stats"
        android:text="@string/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />
</androidx.constraintlayout.widget.ConstraintLayout>