<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsSelector">

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:onClick="gameStats"
        android:text="@string/game_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:onClick="wordStats"
        android:text="@string/word_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:onClick="mainMenu"
        android:text="@string/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>